# fastmetrics

./: README.md  setup.cfg
src/fastmetrics/: __init__.py  fastmetrics.py
src/fastmetrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
