[metadata]
name = fastmetrics
version = 0.0.10
author = Simon Albert Traub
author_email = simontraub@ucla.edu
description = Does the same thing as sklearn.metrics but 100x faster.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SimonFromNeedham/fastmetrics
project_urls =
    Bug Tracker = https://github.com/SimonFromNeedham/fastmetrics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numba>=0.55.2
    numpy>=1.22.0,<1.23.0
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
